# file-sync

./: Cargo.toml  c.json  sync-config.json
src/: main.rs
test-file/: a.txt  b.txt
