[package]
name = "file-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0"
same-file = "1.0.6"
anyhow = "1.0.58"
tokio = { version = "1.20.3", features = ["full"] }
md5 = "0.7.0"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] } 